Going async with setTimeout, Using RxJS operators, Import Just What We Need 利用setTimeout使Observable.create()的數字流為非同步,在訂閱的時候感受時間差 同時測試operators/map 使用RxJS 5.5之後的pip()方式，以及import {map} from 'rxjs/operators'

--- a/src/app/observers-and-observables/observers-and-observables.component.html
+++ b/src/app/observers-and-observables/observers-and-observables.component.html
@@ -1,3 +1,13 @@
 <p>
   observers-and-observables works!
 </p>
+log: <br>
+source$: {{ source$ | async }}
+<p></p>
+<ul>
+  <li *ngFor="let n of numbers">value: {{ n }}</li>
+</ul>
+<p>numbers map(n => n * 2)</p>
+<ul>
+  <li *ngFor="let n of numbersMap">value: {{ n }}</li>
+</ul>
