Processing Mouse Events 利用Observable.fromEvent(document, 'mousemove')將mouse move event轉換成observable stream, 配合map, filter, delay 等operators

--- a/src/app/working-with-observables/working-with-observables.component.html
+++ b/src/app/working-with-observables/working-with-observables.component.html
@@ -1,3 +1,8 @@
 <p>
   working-with-observables works!
 </p>
+<div id="circle"
+  [ngStyle]="{
+    top: mouseXY.y + 'px',
+    left: mouseXY.x + 'px'
+  }"></div>
