Sending Request with XmlHttpRequest 用Observable.create(observer => {})將XmlHttpRequest取得的資料變成Observable
Using flatMap Process Inner Observable
當ㄧ個Observable.subscribe(裡面又有一層Observable.subscribe)，此時可使用flatMap將內層的subscribe結果往外層搬)

--- a/src/app/working-with-observables/working-with-observables.component.html
+++ b/src/app/working-with-observables/working-with-observables.component.html
@@ -1,8 +1,14 @@
 <p>
   working-with-observables works!
 </p>
-<div id="circle"
-  [ngStyle]="{
-    top: mouseXY.y + 'px',
-    left: mouseXY.x + 'px'
-  }"></div>
+
+
+<button #btn>get movies</button>
+
+<div id="output">
+  <ul>
+    <li *ngFor="let movie of movies">
+      {{ movie.title }}
+    </li>
+  </ul>
+</div>
