Dealing with Errors and Exceptions 6. 處理loadWithFetch()的error handler, 利用Promise.reject()

--- a/src/app/working-with-observable-data/working-with-observable-data.component.html
+++ b/src/app/working-with-observable-data/working-with-observable-data.component.html
@@ -2,3 +2,12 @@
   working-with-observable-data works!
 </p>
 
+<button #btn>get movies</button>
+
+<div id="output">
+  <ul>
+    <li *ngFor="let movie of movies">
+      {{ movie.title }}
+    </li>
+  </ul>
+</div>
